send CUR events to Kafka
